--- a/style.css
+++ b/style.css
@@ -2,9 +2,13 @@ body{
     margin: 50px 100px;
     padding: 20px 50px;
     font-family: Poppins;
+    background-color: #ADEED9;
 }
 .judul{
     text-align: center;
+}
+h1{
+    color: #0ABAB5;
 }
 form{
     padding: 20px 80px;
@@ -21,8 +25,27 @@ input{
     border: 1px solid grey;
 }
 button{
-    height: 35px;
-    width: 300px;
+    height: 40px;
+    width: 400px;
     margin: 20px 0px;
+    border: none;
+    background-color: #56DFCF;
+    color: #000;
+    border-radius: 4px;
+    font-size: 17px;
+    cursor: pointer;
+}
+img{
+    width: 900px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     
+}
+#hasil{
+    margin: 30px 20px;
+    text-align: center;
+    padding: 40px;
+    background-color: #FFEDF3;
+    border-radius: 4px;
 }
