--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ form{
 input{
     height: 20px;
     width: 600px;
-    padding: 6px;
+    padding: 9px 18px;
     border-radius: 4px;
     border: 1px solid grey;
 }
 button{
-    height: 40px;
+    height: 45px;
     width: 400px;
     margin: 20px 0px;
     border: none;
@@ -35,17 +35,29 @@ button{
     font-size: 17px;
     cursor: pointer;
 }
+button:hover{
+    background-color: #0ABAB5;
+    color: #FFEDF3;
+    transition: 0.4s;
+}
+section{
+    margin: 0px 18px;
+    padding: 20px 60px;
+    border-radius: 6px;
+    background-color: #FFEDF3;
+}
 img{
-    width: 900px;
+    width: 1000px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    
+    border-radius: 3px;
 }
-#hasil{
-    margin: 30px 20px;
+.Hasil{
+    margin: 50px 20px;
     text-align: center;
     padding: 40px;
-    background-color: #FFEDF3;
+    background-color: #0ABAB5;
+    color: #FFEDF3;
     border-radius: 4px;
 }
